--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <a href="#" id="home-anchor">Home</a>
           <a href="#" id="todos-anchor">Todos</a>
           <a href="#" id="about-anchor">About us</a>
+          <a href="#" id="public-anchor">Team todos</a>
           <a href="#" id="login-anchor">Log in</a>
         </nav>
       </header>
